--- a/hw01/hw01.tex
+++ b/hw01/hw01.tex
@@ -36,9 +36,9 @@
       \end{align*}
       \textbf{(a)} Put this program in standard form.\\
       \textbf{(b)} Use octave to solve the original linear program.\\
-      \textbf{(c)} State the corresponding optimal basic solutions in terms of
-      the matrices $\mathcal{B}$ and $\mathcal{L}$, and state the corresponding
-      values of $\pi$.
+      \textit{Postponed to next assignment: \textbf{(c)} State the corresponding
+        optimal basic solutions in terms of the matrices $\mathcal{B}$ and
+        $\mathcal{L}$, and state the corresponding values of $\pi$.}
     \end{question}
   \end{problem}
 
