--- a/hw01/hw01.tex
+++ b/hw01/hw01.tex
@@ -50,6 +50,9 @@
         optimal basic solutions in terms of the matrices $\mathcal{B}$ and
         $\mathcal{L}$, and state the corresponding values of $\pi$.}
     \end{question}
+
+    \textbf{(b)} $x_1 = 1.16667$, $x_2 = 0$, giving a maximum value of 3.5.  The
+    code for this can be found in \texttt{2b.m}.
   \end{problem}
 
   \begin{problem}{3}
