--- a/hw01/hw01.tex
+++ b/hw01/hw01.tex
@@ -82,6 +82,11 @@
         x_1, x_2 &\text{ integer}
       \end{align*}
     \end{question}
+
+    Octave gives the solution $x_1 = x_2 = 0$, reporting no error.  However,
+    it's worth noting that there can be no integer values for $x_1$ and $x_2$
+    satisfying the constraint $6(x_1 - x_2) = 7$, so this isn't really a
+    solution.  Octave code is provided in \texttt{3.m}.
   \end{problem}
 
   \begin{problem}{4}
