HW02: Add part a of problem 2 for each program.

--- a/hw02/hw02.tex
+++ b/hw02/hw02.tex
@@ -115,6 +115,21 @@
       satisfy complementary slackness. Show your work.  Octave allowed. (If the
       primal is infeasible or unbounded, you can skip this step.)
     \end{question}
+
+    \textbf{Program 1: (a)} According to Octave, $x^*^T = (0, 1)$, and
+    $z^* = 2$.
+
+    \textbf{Program 2: (a)} According to Octave, $x^*^T = (0, 0, 3)$, and
+    $z^* = 3$.
+
+    \textbf{Program 3: (a)} According to Octave, $x^*^T = (1.167, 0)$, and
+    $z^* = 3.5$.
+
+    \textbf{Program 4: (a)} According to Octave, the primal is infeasible.
+
+    \textbf{Program 5: (a)} According to Octave, $x_1 = 0$, $x_2 = 0$,
+    $x_3 = 1$, $c = 1$.
+
   \end{problem}
 
   \begin{problem}{3}
