--- a/hw02/hw02.tex
+++ b/hw02/hw02.tex
@@ -116,13 +116,60 @@
       primal is infeasible or unbounded, you can skip this step.)
     \end{question}
 
-    \textbf{Program 1: (a)} According to Octave, $x^*^T = (0, 1)$, and
-    $z^* = 2$.
+    \textbf{Program 1: (a)} According to Octave, $x^{*T} = (1.25, 1.5)$, and
+    $z^* = 4.25$.  \textbf{(b)} The complimentary slackness conditions are:
 
-    \textbf{Program 2: (a)} According to Octave, $x^*^T = (0, 0, 3)$, and
-    $z^* = 3$.
+    \begin{align*}
+      x_1 = 0 &\text{ or } \pi_1 + 6\pi_2 + 5\pi_3 = 1 \\
+      x_2 = 0 &\text{ or } \pi_1 - 3\pi_2 + 6 \pi_4 = 2 \\
+      \pi_1 = 0 &\text{ or } x_1 + x_2 = 5 \\
+      \pi_2 = 0 &\text{ or } -6x_1 + 3x_2 = -3 \\
+      \pi_3 = 0 &\text{ or } -5x_1 = -24 \\
+      \pi_4 = 0 &\text{ or } -6x_2 = -9 \\
+    \end{align*}
 
-    \textbf{Program 3: (a)} According to Octave, $x^*^T = (1.167, 0)$, and
+    \textbf{(c)} Using the complementary slackness conditions:
+
+    \begin{align*}
+      \pi_1 = 0 &\text{ or } 1.25 + 1.5 = 5 \\
+      \pi_2 = 0 &\text{ or } -6*1.25 + 3*1.5 = -3 \\
+      \pi_3 = 0 &\text{ or } -5*1.25 = -24 \\
+      \pi_4 = 0 &\text{ or } -6*1.5 = -9 \\
+    \end{align*}
+
+    We see that $\pi_1$ and $\pi_3$ must be zero.  We substitute this into the
+    complementary slackness conditions on $x$:
+
+    \begin{align*}
+      6\pi_2 &= 1 \\
+      -3\pi_2 + 6 \pi_4 &= 2 \\
+    \end{align*}
+
+    So, $\pi_2 = \frac{1}{6}$, and then $\pi_4 = -\frac{1}{4}$.  Therefore, we
+    have $\pi^{*T} = (0, \frac{1}{6}, 0, -\frac{5}{12})$.
+
+    \textbf{Program 2: (a)} According to Octave, $x^{*T} = (0, 0, 3)$, and
+    $z^* = 3$.  \textbf{(b)} The complementary slackness conditions are:
+
+    \begin{align*}
+      x_1 = 0 &\text{ or } -\pi_1 + \pi_2 = 1 \\
+      x_2 = 0 &\text{ or } -2\pi_1 = 1 \\
+      x_3 = 0 &\text{ or } 2\pi_2 = 0 \\
+      \pi_1 = 0 &\text{ or } -x_1 - 2x_2 = -5 \\
+      \pi_2 = 0 &\text{ or } x_1 + 2x_3 = 6 \\
+    \end{align*}
+
+    \textbf{(c)} Using the complementary slackness conditions and the $x^*$:
+
+    \begin{align*}
+      \pi_1 = 0 &\text{ or } 0 = -5 \\
+      \pi_2 = 0 &\text{ or } 2*3 = 6 \\      
+    \end{align*}
+
+    So $\pi_1 = 0$.  Applying the complementary slackness condition for $x_3$,
+    $\pi_2 = 0$ as well.  Therefore, we have $\pi^{*T} = (0, 0)$.
+
+    \textbf{Program 3: (a)} According to Octave, $x^{*T} = (1.167, 0)$, and
     $z^* = 3.5$.
 
     \textbf{Program 4: (a)} According to Octave, the primal is infeasible.
