HW02: Problem 2, program 3 done.

--- a/hw02/hw02.tex
+++ b/hw02/hw02.tex
@@ -117,7 +117,16 @@
     \end{question}
 
     \textbf{Program 1: (a)} According to Octave, $x^{*T} = (1.25, 1.5)$, and
-    $z^* = 4.25$.  \textbf{(b)} The complimentary slackness conditions are:
+    $z^* = 4.25$.  \textbf{(b)} The dual is:
+
+    \begin{align*}
+      \min 5\pi_1 + 3\pi_2 + 24\pi_3 + 9\pi_4 &\\
+      \text{s.t. } \pi_1 + 6\pi_2 + 5\pi_3 &\ge 1 \\
+      \pi_1 - 3\pi_2 + 6\pi_4 &\ge 2\\
+      \pi_1, \pi_2, \pi_3, \pi_4 &\ge 0\\
+    \end{align*}
+
+    The complimentary slackness conditions are:
 
     \begin{align*}
       x_1 = 0 &\text{ or } \pi_1 + 6\pi_2 + 5\pi_3 = 1 \\
@@ -149,7 +158,18 @@
     have $\pi^{*T} = (0, \frac{1}{6}, 0, -\frac{5}{12})$.
 
     \textbf{Program 2: (a)} According to Octave, $x^{*T} = (0, 0, 3)$, and
-    $z^* = 3$.  \textbf{(b)} The complementary slackness conditions are:
+    $z^* = 3$.  \textbf{(b)} The dual is:
+
+    \begin{align*}
+      \max -5\pi_1 + 6\pi_2 &\\
+      \text{s.t. } -\pi_1 + \pi_2 &\le 1 \\
+      -2\pi_1 &\le 1 \\
+      2\pi_2 &\le 0 \\
+      \pi_1 &\ge 0 \\
+      \pi_2 &\text{ unconstrained}
+    \end{align*}
+
+    The complementary slackness conditions are:
 
     \begin{align*}
       x_1 = 0 &\text{ or } -\pi_1 + \pi_2 = 1 \\
@@ -170,7 +190,38 @@
     $\pi_2 = 0$ as well.  Therefore, we have $\pi^{*T} = (0, 0)$.
 
     \textbf{Program 3: (a)} According to Octave, $x^{*T} = (1.167, 0)$, and
-    $z^* = 3.5$.
+    $z^* = 3.5$.  \textbf{(b)} The dual is:
+
+    \begin{align*}
+      \min -3 \pi_1 + 7 \pi_2 + 20 \pi_3 &\\
+      \text{s.t. } -4\pi_1 + 6\pi_2 + \pi_3 &\ge 3 \\
+      -5\pi_1 - 6\pi_2 + 8\pi_3 &\ge -5 \\
+      \pi_1, \pi_3 &\ge 0 \\
+      \pi_2 &\text{ unconstrained}
+    \end{align*}
+
+    The complementary slackness conditions are:
+
+    \begin{align*}
+      x_1 = 0 &\text{ or } -4\pi_1 + 6\pi_2 + \pi_3 = 3 \\
+      x_2 = 0 &\text{ or } -5\pi_1 - 6\pi_2 + 8\pi3 = 0 \\
+      \pi_1 = 0 &\text{ or } -4x_1 - 5x_2 = -3 \\
+      \pi_2 = 0 &\text{ or } 6x_1 - 6x_2 = 7 \\
+      \pi_3 = 0 &\text{ or } x_1 + 8x_2 = 20 \\
+    \end{align*}
+
+    \textbf{(c)} Using the complementary slackness conditions and $x$:
+
+    \begin{align*}
+      \pi_1 = 0 &\text{ or } -\frac{28}{6} - 5*0 = -3 \text{ (false)} \\
+      \pi_2 = 0 &\text{ or } 6*\frac{7}{6} - 6*0 = 7 \text{ (true)} \\
+      \pi_3 = 0 &\text{ or } \frac{7}{6} + 8*0 = 20 \text{ (false)} \\
+    \end{align*}
+
+    So, $\pi_1 = 0$ and $\pi_3 = 0$.  We plug this into the conditions for $x_1$
+    and see $6\pi_2 = 3$, so $\pi_2 = \frac{1}{2}$.  So,
+    $\pi^{*T} = (0, \frac{1}{2}, 0)$.  This makes the dual's objective function
+    $3.5$, which matches the primal's, so these are an optimal pair.
 
     \textbf{Program 4: (a)} According to Octave, the primal is infeasible.
 
