--- a/hw02/hw02.tex
+++ b/hw02/hw02.tex
@@ -224,6 +224,28 @@
     $3.5$, which matches the primal's, so these are an optimal pair.
 
     \textbf{Program 4: (a)} According to Octave, the primal is infeasible.
+    \textbf{(b)} The dual is:
+
+    \begin{align*}
+      \min -8\pi_1 + 23\pi_2 - \pi_3 + 4\pi_4 &\\
+      \text{s.t. } 5\pi_1 + 4\pi_2 - 6\pi_3 + \pi_4 &= 3 \\
+      3\pi_1 + 2\pi_2 - 7\pi_3 &= 2 \\
+      \pi_1 + 8\pi_2 - 3\pi_3 &\ge 5 \\
+      \pi_2, \pi_3, \pi_4 &\ge 0 \\
+      \pi_1 &\text{ unconstrained}
+    \end{align*}
+
+    The complementary slackness constraints are:
+
+    \begin{align*}
+      x_1 = 0 &\text{ or } 5\pi_1 + 4\pi_2 - 6\pi_3 + \pi_4 = 3 \\
+      x_2 = 0 &\text{ or } 3\pi_1 + 2\pi_2 - 7\pi_3 = 2 \\
+      x_3 = 0 &\text{ or } \pi_1 + 8\pi_2 - 3\pi_3 = 5 \\
+      \pi_1 = 0 &\text{ or } 5x_1 + 3x_2 + x_3 = -8 \\
+      \pi_2 = 0 &\text{ or } 4x_1 + 2x_2 + 8x_3 = 23 \\
+      \pi_3 = 0 &\text{ or } -6x_1 - 7x_2 - 3x_3 = -1 \\
+      \pi_4 = 0 &\text{ or } x_1 = 4 \\
+    \end{align*}
 
     \textbf{Program 5: (a)} According to Octave, $x_1 = 0$, $x_2 = 0$,
     $x_3 = 1$, $c = 1$.
