--- a/hw03/hw03.tex
+++ b/hw03/hw03.tex
@@ -138,7 +138,7 @@
   \begin{problem}{7}
     \begin{question}
       Consider problem 5 in Homework Assignment 2. Show that the linear program
-      is equivalent to a minimum cost network ﬂow problem and prove that this
+      is equivalent to a minimum cost network flow problem and prove that this
       program has always an integer optimal solution.
 
       \textbf{Problem 5 from Homework Assignment 2:}
@@ -156,6 +156,54 @@
         0 \le x_5 &\le 2 \\
       \end{align*}
     \end{question}
+
+    When a Minimum Cost Network Flow problem is expressed as a Linear Program,
+    its form is:
+
+    \begin{alignat*}{2}
+      \min \sum_{(i,j) \in E} c_{ij} x_{ij} &\: \text{ s.t.} && \\
+      \sum_{j: (i,j) \in E} x_{ij} - \sum_{j: (j,i) \in E} x_{ji} &= b_i &\forall i \in V&\\
+      0 \le x_{ij} &\le u_{ij} & \forall (i,j) \in E &
+    \end{alignat*}
+
+    Each variable in the LP corresponds to an arc.  Each constraint corresponds
+    to a node.  A positive sign in a constraint means it is outgoing, while a
+    negative sign in a constraint means it is incoming.  Each variable should
+    then occur twice in the constraints, once with a positive sign, and once
+    with a negative sign.  If we negate everything in the fourth constraint, we
+    can see that the given LP is exactly in that form.  We will call the nodes 1
+    through 4 in the same order the constraints are given above.  Then we have
+    the following table of variables and their corresponding arcs;
+
+    \begin{tabular}{llll}
+      \hline
+      Var & Arc & Cost & Upper \\
+      \hline
+      $x_1$ & $(1,3)$ & 1 & 1 \\
+      $x_2$ & $(3,4)$ & 1 & 2 \\
+      $x_3$ & $(1,2)$ & 3 & 1 \\
+      $x_4$ & $(2,4)$ & 2 & 3 \\
+      $x_5$ & $(1,4)$ & 4 & 2 \\
+      \hline
+    \end{tabular}
+
+    The nodes have supplies given by the right hand side of their corresponding
+    constraints.  The table below provides those $b_i$ values.
+
+    \begin{tabular}{ll}
+      \hline
+      Constraint & $b_i$ \\
+      \hline
+      1 & 2 \\
+      2 & 1 \\
+      3 & -1 \\
+      4 & -2 \text{ (due to negated constraint)} \\
+      \hline
+    \end{tabular}
+
+    In class, we proved that MCNF problems are unimodular.  Therefore, since the
+    $b_i$ in this problem are all integer, there must be an optimal basic
+    feasible solution which is integer.
   \end{problem}
 
 \end{document}
