HW03: Fix fl dipthong.

--- a/hw03/hw03.tex
+++ b/hw03/hw03.tex
@@ -14,10 +14,10 @@
 
   \begin{problem}{1}
     \begin{question}
-      Consider the minimum cost network ﬂow problem deﬁned on the following
+      Consider the minimum cost network flow problem deﬁned on the following
       network $G=(V, E)$. The node set $V$ consists of the six nodes $a$, $b$,
       $c$, $d$, $e$, and $f$. Each node has a capacity, which is deﬁned as the
-      maximum amount of ﬂow that can cross that node. The nodes have supplies
+      maximum amount of flow that can cross that node. The nodes have supplies
       and capacities as per the following table:
 
       \begin{tabular}{|r|r|r|}
